- In opus.css (line 110-118), remove min-height for #browse .gallery so   that there is not extra space for scrolling when #browse .gallery height   is less than 700px. - In browse.js (line 738-739), make sure slider is moved to the most left   when it's disabled. - In browse.js (line 725-730), update the if condition to make sure when   slider has no value to scroll, it should always be disabled. - In browse.js (641, 647, 1693, 1711, 1734), in cart.js (line 249), make   sure startobs is never less than 1.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -107,13 +107,14 @@ body {
     background-color: white;
 }
 
+/* Note: this is the scrolling area for thumbnail, when min-height is set
+We will have extra space at the bottom for scrolling even if thumbnail is
+not taking up the whole page. */
 #browse .gallery {
     margin: 0;
     padding: 0;
-    margin-top: .25em;
     background-color: #303030; /* #383838; */
     padding-left: 1.5em;
-    min-height: 700px;
 }
 
 .op-gallery-view {
